--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </section>
     <footer class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://github.com/Mktk11">Maykon</a>.
     </footer>
   </main>
 </body>
